[metadata]
name = sketchnu
version = attr: sketchnu.__version__
url = https://github.com/mhendrey/sketchnu
project_urls =
    Source = https://github.com/mhendrey/sketchnu
    Documentation = https://mhendrey.github.io/sketchnu
author = Matthew Hendrey
author_email= matthew.hendrey@gmail.com
classifiers =
    Programming Language :: Python :: 3
license = GNU GPLv3
description = Numba implementations of some sketch algorithms
keywords = numba, sketch

[options]
include_package_data = True
packages = find:
install_requires =
    requests
    importlib-metadata; python_version>="3.8"

[options.packages.find]
exclude =
    docs*
    sketchu.tests*



